Actualizando algunas cositas

--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
 
             <div class="card-certificad">
                 <div class="title-certificad">
+                    <h3>Java / Testing</h3>
+                </div>
+                <div class="img-certificad">
+                    <img src="/img/icon_java_certificado.png" alt="Java">
+                </div>
+                <div class="text-certificad">
+                    <p>Realizado en Argentina Programa. Programación Inicial en Java 
+                       Maven con Eclipse IDE y MYSQL en el año 2023.</p>
+                    </div>
+                <div class="btn-certificad">
+                    <a href="https://drive.google.com/file/d/11ZrHYdNgQHeBWUnUyEA1ju2ZAYHsxtii/view?usp=drive_link" target="_blank">VER</a>
+                </div>
+            </div>
+
+            <div class="card-certificad">
+                <div class="title-certificad">
                     <h3>Full Stack Java</h3>
                 </div>
                 <div class="img-certificad">
@@ -177,7 +193,7 @@
                 </div>
                 <div class="text-certificad">
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, BOOTSTRAP, 
-                    JAVASCRIPT, JAVA y MYSQL en el año 2023.</p>
+                       JAVASCRIPT, JAVA y MYSQL en el año 2023.</p>
                     </div>
                 <div class="btn-certificad">
                     <a href="https://drive.google.com/file/d/168JrL86O8XalKGKuToquRG7OfKLbOEhP/view?usp=sharing" target="_blank">VER</a>
@@ -193,7 +209,7 @@
                 </div>                
                 <div class="text-certificad">
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, JAVASCRIPT, 
-                    PYTHON y POSTGRESQL en el año 2024.</p>
+                       PYTHON y POSTGRESQL en el año 2024.</p>
                     </div>
                 <div class="btn-certificad">
                     <a href="https://drive.google.com/file/d/1KdRXwKaixNvZECdtlVMI5JIVWLJkXzyn/view?usp=sharing" target="_blank">VER</a>
@@ -209,7 +225,7 @@
                 </div>                
                 <div class="text-certificad">
                     <p>Realizado en Codo a Codo. Especialización Unity para Videos Juegos, 
-                    donde se utilizó UNITY y C# en el año 2024</p>
+                       donde se utilizó UNITY y C# en el año 2024</p>
                     </div>
                 <div class="btn-certificad">
                     <a href="https://drive.google.com/file/d/1O6bOgkO-Pp_QFtZ6tu5SP9ywZAj4XYbe/view?usp=sharing" target="_blank">VER</a>
@@ -395,7 +411,7 @@
                 <a href="https://www.facebook.com/joseluis.espinola1" target="_blank" title="Ir a Facebook">
                     <img class="facebook" src="./img/facebook.png" alt="Facebook">
                 </a>
-           <!-- <a href="https://www.instagram.com/jle36/" target="_blank" title="Ir a Instagram">
+                <!-- <a href="https://www.instagram.com/jle36/" target="_blank" title="Ir a Instagram">
                     <img class="instagram" src="./img/instagram.png" alt="Instagram">
                 </a>
                 <a href="https://x.com/jle36" target="_blank" title="Ir a Twitter">
