--- a/proyectos.html
+++ b/proyectos.html
@@ -48,13 +48,13 @@
      <section id="zona1">
         <div class="presentacion">
             <h1>PROYECTOS</h1>
-            <ol class="ol-proyectos">
-                <li class="li-proyectos"><a href="#conferencia">Conferencia Bs As</a></li>
-                <li class="li-proyectos"><a href="#pasteleria">Pastelería Ely</a></li>
-                <li class="li-proyectos"><a href="#peluqueria">Curso de peluquería</a></li>
-                <li class="li-proyectos"><a href="#ubinetsa">Ubinet S.A.</a></li>
-                <li class="li-proyectos"><a href="#cuebanita">Cuebanita</a></li>
-            </ol>
+            <div class="opc-proyectos">
+                <a href="#conferencia">Conferencia Bs As</a>
+                <a href="#pasteleria">Pastelería Ely</a>
+                <a href="#peluqueria">Curso de peluquería</a>
+                <a href="#ubinetsa">Ubinet S.A.</a>
+                <a href="#cuebanita">Cuebanita</a>
+            </div>
         </div>
 
         <a href="#" class="flecha-arriba">
