Card 3D en los certificados

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#">Inicio</a></li>
             <li><a href="#sobremi">Sobre Mi</a></li>
             <li><a href="#container-slider">Habilidades</a></li>
-            <li><a href="#container-documents">Certificados</a></li>
+            <li><a href="#container-certificad">Certificados</a></li>
             <li><a href="#container-proyectos">Proyectos</a></li>
             <li><a href="#section-form">Contacto</a></li>
         </ul>
@@ -164,77 +164,72 @@
 
 
     <!-- ************ Certificados responsive *************** --> 
-    <section id="container-documents">
+    <Section id="container-certificad">
         <h2>Certificados</h2>
-        <div class="container-certificad">
-
-            <div class="card-certificad">
-                <div class="title-certificad">
+        <div class="container-card3d">
+            <div class="card3d">
+                <div class="face front">
+                    <img src="/img/tecnologia1.png" alt="Full Stack Java">
                     <h3>Java / Testing</h3>
                 </div>
-                <div class="img-certificad">
-                    <img src="/img/icon_java_certificado.png" alt="Java">
-                </div>
-                <div class="text-certificad">
+                <div class="face back">
+                    <h3>Java / Testing</h3>
                     <p>Realizado en Argentina Programa. Programación Inicial en Java 
-                       Maven con Eclipse IDE y MYSQL en el año 2023.</p>
+                        Maven con Eclipse IDE y MYSQL en el año 2023.</p>
+                    <div class="link">
+                        <a href="https://drive.google.com/file/d/11ZrHYdNgQHeBWUnUyEA1ju2ZAYHsxtii/view?usp=drive_link" target="_blank">VER</a>
                     </div>
-                <div class="btn-certificad">
-                    <a href="https://drive.google.com/file/d/11ZrHYdNgQHeBWUnUyEA1ju2ZAYHsxtii/view?usp=drive_link" target="_blank">VER</a>
                 </div>
             </div>
 
-            <div class="card-certificad">
-                <div class="title-certificad">
+            <div class="card3d">
+                <div class="face front">
+                    <img src="/img/tecnologia1.png" alt="Full Stack Java">
                     <h3>Full Stack Java</h3>
                 </div>
-                <div class="img-certificad">
-                    <img src="/img/icon_java_certificado.png" alt="Java">
-                </div>
-                <div class="text-certificad">
+                <div class="face back">
+                    <h3>Full Stack Java</h3>
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, BOOTSTRAP, 
-                       JAVASCRIPT, JAVA y MYSQL en el año 2023.</p>
+                        JAVASCRIPT, JAVA y MYSQL en el año 2023.</p>
+                    <div class="link">
+                        <a href="https://drive.google.com/file/d/168JrL86O8XalKGKuToquRG7OfKLbOEhP/view?usp=sharing" target="_blank">VER</a>
                     </div>
-                <div class="btn-certificad">
-                    <a href="https://drive.google.com/file/d/168JrL86O8XalKGKuToquRG7OfKLbOEhP/view?usp=sharing" target="_blank">VER</a>
                 </div>
             </div>
 
-            <div class="card-certificad">
-                <div class="title-certificad">
+            <div class="card3d">
+                <div class="face front">
+                    <img src="/img/tecnologia2.png" alt="Full Stack Java">
                     <h3>Full Stack Python</h3>
                 </div>
-                <div class="img-certificad">
-                    <img src="/img/icon_python_certificado.png" alt="Python">
-                </div>                
-                <div class="text-certificad">
+                <div class="face back">
+                    <h3>Full Stack Python</h3>
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, JAVASCRIPT, 
-                       PYTHON y POSTGRESQL en el año 2024.</p>
+                        PYTHON y POSTGRESQL en el año 2024.</p>
+                    <div class="link">
+                        <a href="https://drive.google.com/file/d/1KdRXwKaixNvZECdtlVMI5JIVWLJkXzyn/view?usp=sharing" target="_blank">VER</a>
                     </div>
-                <div class="btn-certificad">
-                    <a href="https://drive.google.com/file/d/1KdRXwKaixNvZECdtlVMI5JIVWLJkXzyn/view?usp=sharing" target="_blank">VER</a>
                 </div>
             </div>
 
-            <div class="card-certificad">
-                <div class="title-certificad">
-                    <h3>Video Juegos Unity</h3>
+            <div class="card3d">
+                <div class="face front">
+                    <img src="/img/tecnologia3.png" alt="Full Stack Java">
+                    <h3>Especialidad Unity</h3>
                 </div>
-                <div class="img-certificad">
-                    <img src="/img/icon_unity_certificado.png" alt="Unity">
-                </div>                
-                <div class="text-certificad">
+                <div class="face back">
+                    <h3>Especialidad Unity</h3>
                     <p>Realizado en Codo a Codo. Especialización Unity para Videos Juegos, 
-                       donde se utilizó UNITY y C# en el año 2024</p>
+                        donde se utilizó UNITY y C# en el año 2024.</p>
+                    <div class="link">
+                        <a href="https://drive.google.com/file/d/1O6bOgkO-Pp_QFtZ6tu5SP9ywZAj4XYbe/view?usp=sharing" target="_blank">VER</a>
                     </div>
-                <div class="btn-certificad">
-                    <a href="https://drive.google.com/file/d/1O6bOgkO-Pp_QFtZ6tu5SP9ywZAj4XYbe/view?usp=sharing" target="_blank">VER</a>
                 </div>
             </div>
-        </div>   <!-- Container-certificad -->
+        </div>
 
         <!-- Link de descarga -->
-         <div class="container-download">
+        <div class="container-download">
             <h2>LINK DE DESCARGA</h2>
             <div class="button-download">
                 <a href="https://www.oracle.com/ar/java/technologies/downloads/" target="_blank">
@@ -247,10 +242,10 @@
                     <img class="img3" src="/img/Descarga_Unity_removebg.png" alt="Unity download">
                 </a>
             </div>
-         </div>
-    </section>    
+        </div>
+    </Section>
 
-
+   
     <!-- ************Card responsive********************* --> 
     <section id="container-proyectos">
         <h2>Algunos Proyectos</h2>
