--- a/proyectos.html
+++ b/proyectos.html
@@ -29,7 +29,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="index.html#sobremi">Sobre Mi</a></li>
             <li><a href="index.html#container-slider">Habilidades</a></li>
-            <li><a href="index.html#container-documents">Certificados</a></li>
+            <li><a href="index.html#container-certificad">Certificados</a></li>
             <li><a href="index.html#container-proyectos">Proyectos</a></li>
             <li><a href="index.html#section-form">Contacto</a></li>
         </ul>
