Card 3D en los certificados

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="container-card3d">
             <div class="card3d">
                 <div class="face front">
-                    <img src="/img/tecnologia1.png" alt="Full Stack Java">
+                    <img src="/img/tecnologia0.png" alt="Full Stack Java">
                     <h3>Java / Testing</h3>
                 </div>
                 <div class="face back">
@@ -177,7 +177,7 @@
                     <p>Realizado en Argentina Programa. Programación Inicial en Java 
                         Maven con Eclipse IDE y MYSQL en el año 2023.</p>
                     <div class="link">
-                        <a href="https://drive.google.com/file/d/11ZrHYdNgQHeBWUnUyEA1ju2ZAYHsxtii/view?usp=drive_link" target="_blank">VER</a>
+                        <a href="/img/Certificado_ArgentinaPrograma_java_inicial.png" target="_blank">VER</a>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,8 @@
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, BOOTSTRAP, 
                         JAVASCRIPT, JAVA y MYSQL en el año 2023.</p>
                     <div class="link">
-                        <a href="https://drive.google.com/file/d/168JrL86O8XalKGKuToquRG7OfKLbOEhP/view?usp=sharing" target="_blank">VER</a>
+                        <!-- <a href="https://drive.google.com/file/d/168JrL86O8XalKGKuToquRG7OfKLbOEhP/view?usp=sharing" target="_blank">VER</a> -->
+                        <a href="/img/Certificado_CAC_full_stack_java_2023.png" target="_blank">VER</a>
                     </div>
                 </div>
             </div>
@@ -207,7 +208,7 @@
                     <p>Realizado en Codo a Codo. Se usó HTML, CSS, JAVASCRIPT, 
                         PYTHON y POSTGRESQL en el año 2024.</p>
                     <div class="link">
-                        <a href="https://drive.google.com/file/d/1KdRXwKaixNvZECdtlVMI5JIVWLJkXzyn/view?usp=sharing" target="_blank">VER</a>
+                        <a href="/img/Certificado_CAC_full_stack_python_2024.png" target="_blank">VER</a>
                     </div>
                 </div>
             </div>
@@ -222,7 +223,7 @@
                     <p>Realizado en Codo a Codo. Especialización Unity para Videos Juegos, 
                         donde se utilizó UNITY y C# en el año 2024.</p>
                     <div class="link">
-                        <a href="https://drive.google.com/file/d/1O6bOgkO-Pp_QFtZ6tu5SP9ywZAj4XYbe/view?usp=sharing" target="_blank">VER</a>
+                        <a href="/img/Certificado_CAC_Unity_2024.png" target="_blank">VER</a>
                     </div>
                 </div>
             </div>
