--- a/index.html
+++ b/index.html
@@ -366,6 +366,30 @@
                 </div>
             </div>
 
+            <div class="card">
+                <div class="card-img">
+                    <img src="/img/controlstock/controlstock1.jpg" alt="Proyecto6">
+                </div>
+                <div class="card-title">
+                    <h3>Control Stock</h3>
+                </div>
+                <div class="card-description">
+                    <p>Control de Stock, es un proyecto de Trabajo Integrador Final, que se ESTA 
+                       EMPEZANDO, para SER PRESENTADO en TALENTO TECH en Diciembre 2024. Se está
+                       usando las siguientes técnologias: HTML, CSS, JAVASCRIPT, y luego se 
+                       implementará también BOOTSTRAP, todo bajo la IDE de VISUAL STUDIO CODE. 
+                       La página trata de un un software funcional preparado para el CONTROL DE 
+                       STOCK.
+                       Comienzo de creación: Octubre 2024. 
+                       Es cursada del último cuatrimestre del año 2024.-
+                    </p>
+                </div>
+                <div class="card-btns">
+                    <a href="/proyectos.html#controlstock" class="btn">Ver Mas</a>
+                    <a href="https://control-stock-jle.netlify.app/" class="btn" target="_blank">Proyecto</a>
+                </div>
+            </div>
+
         </div>
     </section>
 
