--- a/proyectos.html
+++ b/proyectos.html
@@ -54,6 +54,7 @@
                 <a href="#peluqueria">Curso de peluquería</a>
                 <a href="#ubinetsa">Ubinet S.A.</a>
                 <a href="#cuebanita">Cuebanita</a>
+                <a href="#controlstock">Control de Stock</a>
             </div>
         </div>
 
@@ -249,6 +250,37 @@
             </div>
             <div class="card5">
                 <img src="/img/cuebanita/cuebanita13.jpg" alt="cuebanita13">
+            </div>
+        </div>
+    </section>
+    
+
+    <section class="contenedor container6" id="controlstock">
+        <h2>CONTROL DE STOCK</h2>
+        <div class="card-container6">
+            <div class="card6">
+                <img src="/img/controlstock/controlstock1.jpg" alt="controlstock1">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock2.jpg" alt="controlstock2">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock3.jpg" alt="controlstock3">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock4.jpg" alt="controlstock4">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock5.jpg" alt="controlstock5">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock6.jpg" alt="controlstock6">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock7.jpg" alt="controlstock7">
+            </div>
+            <div class="card6">
+                <img src="/img/controlstock/controlstock8.jpg" alt="controlstock8">
             </div>
         </div>
     </section>
