--- a/index.html
+++ b/index.html
@@ -408,7 +408,10 @@
                 <input type="checkbox" id="check-priv" required>
                 <label for="check-priv" class="text-priv">Acepto se envíen mis datos</label>
             </div>
-            <input type="submit" id="boton" title="Clic para enviar el mail" value="ENVIAR">
+            <div class="btns-form">
+                <input type="submit" class="btn-f btn-sudmit" title="Clic para enviar el mail" value="ENVIAR">
+                <input type="reset" class="btn-f btn-reset" title="Clic para limpiar" value="LIMPIAR">
+            </div>
         </form>
     </section>
 
